--- a/app/src/main/res/layout/dates_view.xml
+++ b/app/src/main/res/layout/dates_view.xml
@@ -44,12 +44,12 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_alignStart="@+id/date_label"
-        android:layout_marginTop="44dp"
         android:layout_marginEnd="63dp"
         android:layout_marginStart="10dp"
+        android:layout_marginTop="44dp"
         android:shadowColor="#ffffff"
         android:shadowRadius="3"
-        android:text="TextView text text text text"
+        android:text="Txtview text text text text"
         android:textColor="@color/colorAccent"
         android:textSize="29sp"
         android:textStyle="bold" />
