--- a/app/src/main/res/layout/notepad_view.xml
+++ b/app/src/main/res/layout/notepad_view.xml
@@ -56,17 +56,18 @@
         android:id="@+id/editTextNota"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginStart="35dp"
+        android:layout_below="@id/notepad_title"
         android:layout_marginEnd="38dp"
+        android:layout_marginStart="35dp"
         android:layout_marginTop="18dp"
+        android:background="@android:color/transparent"
         android:ems="10"
-        android:text=""
         android:gravity="top"
         android:hint="@string/hint_notepad"
-        android:layout_below="@id/notepad_title"
+        android:padding="1dp"
+        android:text=""
         android:textColor="@android:color/black"
-        android:textColorHint="@color/colorHint2"
-        android:background="@android:color/transparent"/>
+        android:textColorHint="@color/colorHint2" />
 
     <!-- <android.support.design.widget.FloatingActionButton-->
         <!--android:id="@+id/fab_save_note"-->
